--- a/app/src/main/res/layout/activity_leder_slut_moede.xml
+++ b/app/src/main/res/layout/activity_leder_slut_moede.xml
@@ -17,7 +17,7 @@
         android:fontFamily="sans-serif"
         android:text="Se Kommentare"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -33,9 +33,9 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
         android:fontFamily="sans-serif"
-        android:text="Start møde"
+        android:text="Start tid"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -53,7 +53,7 @@
         android:fontFamily="sans-serif"
         android:text="Se Feedback"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -69,8 +69,8 @@
         android:layout_marginBottom="8dp"
         android:background="#ffff"
         android:padding="10dp"
-        android:text="Tid start"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,8 +86,8 @@
         android:layout_marginBottom="8dp"
         android:background="#ffff"
         android:padding="10dp"
-        android:text="Tid slut"
         android:textAlignment="center"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
