--- a/app/src/main/res/layout/activity_moede_oprettet.xml
+++ b/app/src/main/res/layout/activity_moede_oprettet.xml
@@ -30,8 +30,10 @@
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
+        android:fontFamily="sans-serif"
         android:text="@string/forsideBtn"
         android:textColor="@android:color/background_light"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
