--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     android:background="#DFE0E0"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".DagsordenLogik.Dagsorden">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,6 +25,7 @@
                 android:paddingBottom="10dp"
                 android:text="Opret dagsorden"
                 android:textAlignment="center"
+                android:textAllCaps="true"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp" />
 
@@ -35,7 +35,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Mødenavn"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/tidspunkt"
@@ -43,7 +44,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Dato og tid"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/lokation"
@@ -51,7 +53,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Lokation"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:padding="10dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -62,6 +65,7 @@
                 android:paddingBottom="10dp"
                 android:text="Opret mødepunkter nedenfor"
                 android:textAlignment="center"
+                android:textAllCaps="true"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp" />
 
@@ -70,6 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Mødepunkt"
+                android:padding="10dp"
                 android:textSize="22sp" />
 
             <EditText
@@ -77,14 +82,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Beskrivelse"
-                android:paddingTop="10dp"
+                android:padding="10dp"
                 android:textSize="14sp" />
 
             <Button
                 android:id="@+id/btnTilfoj"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="325dp"
+                android:layout_marginLeft="340dp"
                 android:background="@drawable/addtryk"
                 android:textColor="@android:color/background_light" />
 
@@ -94,6 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="#DFE0E0"
+                android:padding="10dp"
                 android:scrollbars="vertical|none">
 
             </androidx.recyclerview.widget.RecyclerView>
@@ -102,11 +108,14 @@
                 android:id="@+id/btnOpret"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="100dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/knap_baggrund"
+                android:fontFamily="sans-serif"
                 android:text="Opret dagsorden"
                 android:textColor="@android:color/background_light"
+                android:textSize="16sp"
                 android:visibility="visible" />
         </LinearLayout>
     </ScrollView>
