--- a/app/src/main/res/layout/activity_slut.xml
+++ b/app/src/main/res/layout/activity_slut.xml
@@ -97,6 +97,7 @@
             android:ems="10"
             android:hint="Tilføj kommentar"
             android:inputType="textMultiLine"
+            android:padding="10dp"
             android:singleLine="false"
             android:textAlignment="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
