--- a/app/src/main/res/layout/activity_tab8.xml
+++ b/app/src/main/res/layout/activity_tab8.xml
@@ -19,6 +19,7 @@
         android:text="Videre"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
