--- a/app/src/main/res/layout/activity_tab8_feedback.xml
+++ b/app/src/main/res/layout/activity_tab8_feedback.xml
@@ -37,6 +37,24 @@
         </LinearLayout>
     </ScrollView>
 
+    <Button
+        android:id="@+id/forsideButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:background="@drawable/knap_baggrund"
+        android:fontFamily="sans-serif"
+        android:text="@string/færdigBtn"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.87" />
+
     <TextView
         android:id="@+id/spmTextView"
         android:layout_width="match_parent"
