--- a/app/src/main/res/layout/activity_foerste_leder.xml
+++ b/app/src/main/res/layout/activity_foerste_leder.xml
@@ -20,6 +20,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.35" />
+
     <Button
         android:id="@+id/startMødeBtn"
         android:layout_width="wrap_content"
