--- a/app/src/main/res/layout/activity_kommentar.xml
+++ b/app/src/main/res/layout/activity_kommentar.xml
@@ -28,21 +28,18 @@
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:divider="#FFFFFF"
         android:dividerHeight="4px"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintVertical_bias="0.433" />
