--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -98,6 +98,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:background="#DFE0E0"
                 android:padding="10dp"
                 android:scrollbars="vertical|none">
@@ -108,8 +110,9 @@
                 android:id="@+id/btnOpret"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="90dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginRight="90dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/knap_baggrund"
                 android:fontFamily="sans-serif"
