--- a/app/src/main/res/layout/activity_tab8_feedback.xml
+++ b/app/src/main/res/layout/activity_tab8_feedback.xml
@@ -41,7 +41,7 @@
         android:id="@+id/forsideButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/knap_baggrund"
         android:fontFamily="sans-serif"
         android:text="@string/færdigBtn"
@@ -50,10 +50,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.87" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/spmTextView"
